object/complexcls1/output.txt
myArray1$ g++ myarray01.cpp 
myarray01.cpp: In function ‘void f1(myArray)’:
myarray01.cpp:29:10: error: use of deleted function ‘myArray::myArray()’
   29 |  myArray c;
      |          ^
myarray01.cpp:20:2: note: declared here
   20 |  myArray() = delete;
      |  ^~~~~~~
myArray1$ 

